full semi-final review complete; just a few paragraphs to re-read

--- a/chap2.tex
+++ b/chap2.tex
@@ -1669,7 +1669,7 @@ roadway.
 These proposals involve numerous potential pitfalls. While coordinated
 fleets of vehicles could increase road throughput by 2 to 20
 times by various estimates \cite[p. 229]{adamsBrewerRoadways}, the top end of those
-increases would be necessary to match the 
+increases would be necessary to exceed the 
 throughputs of buses or subway trains, which can be 10 times
 those of cars \cite[p. 222]{loweCars}.\footnote{Adams and Brewer
   estimate 10 solo drivers per square foot of right-of-way per
