--- a/chap3.tex
+++ b/chap3.tex
@@ -192,7 +192,7 @@ age it remains a great introduction\footnote{And in fact, Sheridan is almost pre
   make it to market: all of the ones he lists we see today, and the
   last (like automatic lane keeping) are really only just now becoming
   available \cite[p. 256]{sheridan}. Many of these technologies were in development at the
-  time, as Sheridan's book came out during the middle of the Eureka
+  time, as Sheridan's book came out during the middle of the EUREKA
   PROMETHEUS project.} and a
 much-needed counterpoint to na\"{i}ve ideas about automation.\footnote{Human
 supervisory control history
@@ -381,7 +381,7 @@ self-driving vehicles most necessary, at least rhetorically. %% But human
 %% research is the source of the NHTSA's claim that users of
 %% higher-levels of automation will not, and will not be expected to,
 %% monitor its operation. 
-Experience shows that human operators who become reliant on the
+Experience shows that human operators who become reliant on
 automation to perform a task are ill-equipped to take that task back
 in a crisis situation, and task hand-over is likely to be
 catastrophic \cite{AF447} \cite{Chowpaper}. An often-used justification
@@ -478,12 +478,13 @@ think about the ways these newly expanded devices operate? As Sheridan notes, mu
 HSC has gone on elsewhere under different names. Coming instead from cognitive
 science, Edwin Hutchins and his anthropological work on group cognition
 processes expands from the traditional focus on the individual agent
-to systems of interacting agents and technologies.\footnote{And, notably, he responds to the canonical focus of
+to systems of interacting agents and technologies.\footnote{And,
+  notably, Hutchins responds to the canonical focus of 
   cognitive science on the ``mental processes that organize the
-  behavior'' of an individual, a position Hutchins cites as having its
+  behavior'' of an individual, a position he cites as having its
 standard statement in Newell and Simon's 1972 \emph{Human Problem
   Solving} \cite[p. 265-266]{hutchinsCockpit}. These two early AI pioneers show
-up again here, and their individualist focus perhaps sheds some 
+up again here, and their individualist focus sheds some 
 light on why the narratives of automated vehicle technology that are
 inflected by AI are so different than they would be if told instead
 through the lens of supervisory control.}
@@ -543,7 +544,7 @@ set at the individual plus his or her immediate technological or biological
 surroundings, much greater differences in capability become apparent.}
 Complex jobs involving spatial
 processing and reasoning (driving between the lines and avoiding other
-cars), are likewise transformed through technological interfaces into other
+cars) are likewise transformed through technological interfaces into other
 tasks. It is precisely these changes in task to which we should attend
 if we would like to properly understand (and design) the role of the
 operator within an automated vehicle. 
@@ -662,29 +663,30 @@ guide the industry's development---particularly levels-of-automation
 formulations, coming from a long history of such taxonomies
 \cite{PSWickens} \cite{SMART} \cite{ALFUS}
 \cite{parasuramanW}\footnote{Perhaps traceable, in a way, to   
-  Sheridan's work \cite[p. 23]{DSB}.}---strongly shape the automated
-vehicles narratives. Developed to guide
+  Sheridan's work \cite[p. 23]{DSB}.}---strongly shape automated
+vehicle narratives. Developed to guide
 researchers and public agencies toward an appropriate understanding of
 automation, these documents are easily taken
 as evidence for how automated systems must or will develop in
 practice. The primary formulations of
 levels of autonomy for self-driving cars 
 have been published by the National Highway Traffic Safety
-Administration (NHTSA) and the Society of Automotive Engineers
-(SAE).\footnote{The German Federal Highway Research Institute, BASt,
+Administration (NHTSA) and SAE International (formerly, Society of
+Automotive Engineers).\footnote{The German Federal Highway Research
+  Institute, BASt, 
  has also produced a taxonomy that predates the SAE's work, and
  influenced it in key ways.}
 These reports exhibit some resonances and contradictions in how these
 organizations represent autonomous vehicles and their human
 drivers---and speak to different ideas of who the ``driver'' will be
 in automated systems. However, both make assumptions about
-the way autonomy is or will be implemented\footnote{The Society of Automotive Engineers in particular
+the way autonomy is or will be implemented that may not ultimately be
+valid and certainly foreclose on alternative ways in
+which systems could be designed.\footnote{The SAE in particular
   made an attempt to avoid prescriptive definitions of autonomy in
   their work. But even a descriptive set of levels contains an
   explicit hierarchy, which can be read as an implicit narrative of
-  progress or roadmap for development.} that may not ultimately be
-valid and certainly foreclose on alternative ways in
-which systems could be designed. When closely
+  progress or roadmap for development.} When closely
 interrogated, they do not sufficiently heed the
 complexities of joint human-machine systems operation.
 %% These documents represent an important
@@ -731,7 +733,7 @@ According to the NHTSA definition, automated
 vehicles are those in which ``aspects of a safety-critical control
 function (e.g., steering, throttle, or braking) occur without direct
 driver input'' \cite[p. 3]{NHTSA}. This definition \emph{excludes} warning
-systems that nevertheless still use ``automation'' in varying degrees,
+systems that nevertheless still use automation in varying degrees,
 drawing a suspect line between monitoring and action. Though systems
 that only provide information and systems 
 that directly affect the mechanical state of the vehicle do differ, making that
@@ -750,7 +752,7 @@ so that cars with currently banal automatic technologies like
 automatic transmissions do 
 not count as ``automated vehicles,'' but this is the wrong footing on
 which to rest a definition of automation.} This neglects both the
-vital roles automation plays both in tertiary components as well as
+vital roles automation plays in tertiary components as well as
 the delicate dance of human and automated control that happens in
 current vehicles. Automated wipers and hazard
 lights may well be ``safety critical'' in at least some situations.
@@ -816,7 +818,7 @@ pedal [sic] at the same time'' \cite[p. 5]{NHTSA}. This description of bodily st
 the most coherent part of the levels definitions, but makes little
 practical sense for defining automation. One can drive hands-and-feet
 free in a non-automated vehicle, for short periods of time, in the
-right conditions. Does the car become a level 2 during this time?
+right conditions. Does the car become a level 2 system during this time?
 
 %%EXPAND on the definitional issue
 
@@ -905,7 +907,7 @@ industry already testing on public roads. The automation-first
 approach, which wants to jump directly to an NHTSA level 4 system,
 must be tempered for liability reasons since, as the 
 NHTSA is very aware (given their research interest in level 2 and 3
-systems), the technology is not yet ready.\footnote{They continually
+systems), that technology is not yet ready.\footnote{They continually
   restate the point that only few level 3, and no level 4, systems
   currently exist, and that neither of these technology levels is yet
   ready for unfettered operation \cite[p. 10, 14]{NHTSA}.} When trying to make space for
@@ -1008,11 +1010,11 @@ transitioning control of a system from fully autonomous to fully
 manual though never lingering in between \cite[p. 4]{SAE}. It should be
 noted that this directly contrasts with the NHTSA's driver-focused
 approach, as it places fundamental decision authority in the hands of
-the computer system. (When development is not necessarily oriented
+the computer system. When development is not necessarily oriented
 toward achieving fully autonomous operation quickly---or when a
 taxonomy is not designed around making space for Google's self-driving
 car project and its ideological orientation---and is instead
-focused on incremental improvements, such electronic overrides seem more acceptable.)
+focused on incremental improvements, such electronic overrides seem more acceptable.
 
 The SAE mentions the true complexities of driving at the report's end,
 describing how the \emph{dynamic driving task} is distinct from ``driving'':
@@ -1085,7 +1087,7 @@ of autonomy and that these levels are discrete and represent scaffolds
 of increasing difficulty'' \cite[p. 23-24]{DSB}, all interpretations
 made by both the 
 NHTSA and SAE taxonomies, ones I have been
-attempting to critique. Autonomy also ``deflects focus from the fact that all
+attempting to critique. Preoccupation with autonomy ``deflects focus from the fact that all
 autonomous systems are joint human-machine cognitive systems'' and
 ``reinforces fears about unbounded autonomy'' while obscuring
 the fact that no systems are fully autonomous \cite[p. 24]{DSB}. Humans are always
@@ -1286,11 +1288,11 @@ all this, we should avoid the clich\'{e}d question ``People: sinners
 or saints?'' which seems so popular in media discussions: it represents
 a ``false position'' that does not adequately reflect the complex
 nature of operating automated
-systems \cite[p. 1]{woodshollnagel}\footnote{Ultimately, as Woods and
+systems \cite[p. 1]{woodshollnagel}.\footnote{Ultimately, as Woods and
 Hollnagel point out, all cognitive systems are finite and will
 therefore also have errors, lapses, and
 failures \cite[p. 1--2]{woodshollnagel}.} Success in automation is not
-a given that the human presence degrades,\footnote{For example, the PARC/CAST Flight Deck Automation Working Group
+a given that the human presence degrades,\footnote{The PARC/CAST Flight Deck Automation Working Group
 found that human pilots are actively involved in mitigating risk from
 other system components, and states that ``an exclusive focus on pilot
 errors will not take into account the positive actions and decisions
@@ -1445,7 +1447,8 @@ employee fell asleep at the wheel, which was the catalyst for their
 concern and change in focus.} Troublingly, these visions ignore the
 skilled, rewarding parts of driving, and disregard the shift in the automated
   vehicle from a family space to an extension of the working environment,
-  which threatens its own sort of potentially uncreative labor.
+  which threatens its own sort of potentially uncreative labor---there
+  is, however, an alternative.
 
 Supervisory control presents the possibility for a
 renegotiation of car 
@@ -1482,7 +1485,7 @@ the possibility of a
 middle-ground in the hybrid narrative:  future cars, using increasing
 amounts of automated safety technologies,
 may be vulnerable to the same critiques as the ``overly'' computerized Nissan GT-R. But these
-vehicles could still provide a role for the human and a place for
+vehicles could still provide both an ethical role for the human and a place for
 enthusiasts who want to be involved in vehicle operations.
 
 \section{Conclusion}
@@ -1500,7 +1503,7 @@ systems involving, at in its broadest view, designers, producers,
 owners, lawmakers, and multitudes of others. In a more restricted
 sense, however, the operator is directly involved in
 operating a joint 
-human-machine system. Not recognizing this as
+human-machine system. Not recognizing this situation as
 such does not make it not so:  it  
 only means we are 
 likely to neglect the most important parts of the system design---in
