--- a/concl.tex
+++ b/concl.tex
@@ -42,16 +42,16 @@ but were mixed-use areas where children played, vendors sold goods,
 and adults walked, talked, biked, and gathered socially. 
 This caused problems for the drivers and
 manufacturers of fast moving, dangerous vehicles, which all too
-frequently inflicted bodily harm on those people with which they
+frequently inflicted bodily harm on those people with whom they
 shared the environment. The regimentation of public space into
 crosswalks, where pedestrians are legally protected, and other parts
 of the roadway from which pedestrians are supposed to be excluded, is
 a direct outcome of an early 20th century campaign to reduce
 pedestrian deaths. But accidents nevertheless occurred, and the victims were primarily
-children and youths \cite[p. 11]{nortonFighting}; and the deaths of
+children and youths \cite[p. 11]{nortonFighting}; the deaths of
 children came to have a new social meaning that made them 
 particularly abhorrent.
-After Mary Miner's death in 1903, the driver ``had a narrow escape
+After Mary Miner's death in 1903, the streetcar driver ``had a narrow escape
 from violence at the hands of a mob estimated by the police . . . to
 have been 3,000 strong'' \cite[p. 22]{zelizer}. Accidental deaths of children were an
 alarming problem, with a significant public response:  mobs attacked
@@ -163,9 +163,9 @@ dangerous technologies that required careful licensing and use to
 make safe?\footnote{In one such battle over cars as ``dangerous
 instrumentalities,'' a court held that ``Until human agency
 intervenes, they are usually 
-harmless'' \cite[p. 70]{lochlannjain}. What about vehicles that can
+harmless'' \cite[p. 70]{lochlannjain}. This raises questions about vehicles that can
 be said to ``operate
-themselves'' for some periods of time?} Machine agency, even under
+themselves'' for some periods of time.} Machine agency, even under
 supervision, presents the 
 possibility that our laws and intuitions must change.
 And what new re-shapings of public space will happen as part of the 
@@ -245,8 +245,8 @@ drive (equally blind technophilia). The idea that humans drive through
 machines, or machines drive 
 via humans, or that human and machine drive in combination, are
 practically incomprehensible. But once we
-recognize that we \emph{already} drive through machines, and that they
-even already may drive through us,\footnote{Consider blind-spot
+recognize that we \emph{already} drive through machines, and that they may
+already drive through us,\footnote{Consider blind-spot
 warning lights, which are an automated system designed to affect the
 human and produce a response, but have no independent capacity to drive
 the vehicle.} multiple, multifaceted futures of automated vehicle
@@ -254,7 +254,7 @@ development open to us. We are not building robotic
 chauffeurs, but rather designing ourselves, in some fashion, into more
 hybrid, more cyborg, entities. Fostering an appreciation of this is paramount, one of the
   great challenges for the public understanding 
-of technology in the near future. \footnote{To return to science fiction, Phillip K. Dick said in
+of technology in the near future.\footnote{To return to science fiction, Phillip K. Dick said in
 a 1972 speech: ``Someday a human being, named perhaps Fred White, may shoot a robot
 named Pete Something-or-Other, which has come out of a General
 Electrics factory, and to his surprise see it weep and bleed. And the
@@ -472,11 +472,11 @@ technologies.\footnote{Travel sickness is another potential barrier to
   \cite{SivakSchoettleSick}. The authors suggest fixes, including
   maximizing passengers' view with large windows and forcing them to
   face forward---but a
-  public-rapid-transit researcher I spoke to described that his group
+  PRT researcher I spoke to described that his group
   had found minimizing or eliminating forward view made riders in
   automated PRT systems
   most comfortable.
-  Certain levels of human involvement could ameliorate travel sickness
+  Certain levels of human involvement could be an alternative way to ameliorate travel sickness
   issues.} Though
 this may be distasteful to some technologists invested in furthering
 technological solutions to social problems, it is not fundamentally
@@ -502,7 +502,7 @@ systems that are tasked with keeping us safe, whether in space, in the
 air, or on the ground. In applying this approach, however, it is
 important to keep in mind the extent to which we are re-making
 ourselves into managers or into machine tenders:  Are we maintaining a sense of
-creative agency? Or becoming mere tools or larger organizations? This
+creative agency? Or becoming mere tools of larger organizations? This
 is especially important as we will use our  
 vehicles every day, and cannot afford to alienate ourselves from them.
 A future in which our transportation system is indifferent to us is
@@ -539,7 +539,7 @@ systems to support humans in their tasks. Both ways of considering
 automated systems can often be applied to the same technological
 artifact, but result in very different ways of thinking.\footnote{A
 speech-to-text system can be seen as either a technology to transcribe 
-the human voice into text instead of a person, or a tool to assist a
+the human voice into text, instead of using a person, or a tool to assist a
 human with transcription. But the choice of perspective will likely do
 much to change how such a technology is designed. I would hypothesize that
 the focus on what computerized personal assistants can do, for
@@ -652,6 +652,9 @@ ones built to replace them.
 %% view of reality it does not do justice
 %% to the complexity of the situation. T
 
+%% Complex changes to complex, high-stakes systems produce unpredictable
+%% results.
+
 Narratives that claim undue caution in the
 rollout of autonomous vehicles will directly ``cost'' lives---since
 people are killed by human drivers every day \cite{driverlessfuture}
@@ -665,8 +668,9 @@ also, fundamentally, matters of faith. There is no precise answer, as
 humans and machines both err alone or in combination, and
 the safety of increasingly autonomous vehicles is a moving target
 against which more radical approaches must be compared.
-Complex changes to complex, high-stakes systems produce unpredictable
-results. So how we implement automated vehicle technology is
+Results of our changes to complex, high-stakes systems may be
+unpredictable. So how we implement 
+automated vehicle technology is 
 about narratives, the stories we believe and tell about technology, as
 much as it is about mathematics and modeling the world. When those
 stories come to define major policy documents, as they have the
@@ -709,7 +713,7 @@ safe and improve our cities, but the deep, engaged, and difficult
 questions of how it can be leveraged to achieve such aims. The real
 question we need to ask is what form technologies of vehicle automation 
 should take, and what benefits and acceptable sacrifices adhere to
-that choice. This question is a truly multidisciplinary venture,
+that choice. Answering this question is a truly multidisciplinary venture,
 involving engineering, law, policy, design, and ethics. When we
 automate, do we choose to do so with the philosophy of ``do no harm''
 or ``save more lives''?\footnote{These are deep and subtle questions,
@@ -721,8 +725,8 @@ or ``save more lives''?\footnote{These are deep and subtle questions,
   philosophy specifically oriented around saving the greatest number.
   These two basic premises, extrapolated out to their logical
   conclusions, may diverge rather than converge, in ways that remind
-  us of the dystopic potential of quantification and optimization,
-  which can lead to solutions that are fundamentally inhumane. It
+  us of the dystopic potential of quantification and optimization to
+  lead to solutions that are fundamentally inhumane. It
   would be foolish 
   to assume that medical systems, themselves a collection of
   technologies and people, are not affected by these kinds of
